Fix z-index of nav

--- a/frontend/css/nav.css
+++ b/frontend/css/nav.css
@@ -18,13 +18,16 @@ Stretchy Nav style - common to:
 -------------------------------- */
 .cd-stretchy-nav {
   position: fixed;
-  z-index: 2;
+  z-index: 100;
   top: 40px;
   right: 5%;
+  height: 60px;
 }
+
 .cd-stretchy-nav.nav-is-visible{
     z-index:100;
 }
+
 .cd-stretchy-nav .stretchy-nav-bg {
   /* this is the stretching navigation background */
   position: absolute;
@@ -40,6 +43,7 @@ Stretchy Nav style - common to:
   -moz-transition: height 0.2s, box-shadow 0.2s;
   transition: height 0.2s, box-shadow 0.2s;
 }
+
 .cd-stretchy-nav.nav-is-visible .stretchy-nav-bg {
   height: 100%;
   box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
@@ -58,6 +62,7 @@ Stretchy Nav style - common to:
   white-space: nowrap;
   color: transparent;
 }
+
 .cd-nav-trigger span, .cd-nav-trigger span::after, .cd-nav-trigger span::before {
   /* this is the hamburger icon */
   position: absolute;
@@ -65,6 +70,7 @@ Stretchy Nav style - common to:
   height: 2px;
   background-color: #ffffff;
 }
+
 .cd-nav-trigger span {
   /* middle line of the hamburger icon */
   left: 50%;
@@ -80,6 +86,7 @@ Stretchy Nav style - common to:
   -moz-transition: background-color 0.2s;
   transition: background-color 0.2s;
 }
+
 .cd-nav-trigger span::after, .cd-nav-trigger span::before {
   /* top and bottom lines of the hamburger icon */
   content: '';
@@ -91,6 +98,7 @@ Stretchy Nav style - common to:
   -moz-transition: -moz-transform 0.2s;
   transition: transform 0.2s;
 }
+
 .cd-nav-trigger span::before {
   -webkit-transform: translateY(-6px);
   -moz-transform: translateY(-6px);
@@ -98,6 +106,7 @@ Stretchy Nav style - common to:
   -o-transform: translateY(-6px);
   transform: translateY(-6px);
 }
+
 .cd-nav-trigger span::after {
   -webkit-transform: translateY(6px);
   -moz-transform: translateY(6px);
@@ -105,12 +114,15 @@ Stretchy Nav style - common to:
   -o-transform: translateY(6px);
   transform: translateY(6px);
 }
+
 .no-touch .cd-nav-trigger:hover ~ .stretchy-nav-bg {
   box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
 }
+
 .nav-is-visible .cd-nav-trigger span {
   background-color: transparent;
 }
+
 .nav-is-visible .cd-nav-trigger span::before {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
@@ -118,6 +130,7 @@ Stretchy Nav style - common to:
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
+
 .nav-is-visible .cd-nav-trigger span::after {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
@@ -136,6 +149,7 @@ Stretchy Nav style - common to:
   transition: visibility 0.3s;
   text-align: right;
 }
+
 .cd-stretchy-nav ul a {
   position: relative;
   display: block;
@@ -148,6 +162,7 @@ Stretchy Nav style - common to:
   -moz-transition: color 0.2s;
   transition: color 0.2s;
 }
+
 .cd-stretchy-nav ul a i {
   /* navigation item icons */
   content: '';
@@ -164,6 +179,7 @@ Stretchy Nav style - common to:
   opacity: .6;
   background: url(../img/cd-sprite-1.svg) no-repeat 0 0;
 }
+
 .cd-stretchy-nav ul a::before {
   /* line visible next to the active navigation item */
   content: '';
@@ -179,29 +195,37 @@ Stretchy Nav style - common to:
   transform: translateX(3px) translateY(-50%) scaleY(0);
   background-color: #0a9581;
 }
+
 .cd-stretchy-nav ul li:first-of-type a::after {
   /* change custom icon using image sprites */
   background-position: -32px 0;
 }
+
 .cd-stretchy-nav ul li:nth-of-type(2) a::after {
   background-position: -64px 0;
 }
+
 .cd-stretchy-nav ul li:nth-of-type(3) a::after {
   background-position: -48px 0;
 }
+
 .cd-stretchy-nav ul li:nth-of-type(4) a::after {
   background-position: 0 0;
 }
+
 .cd-stretchy-nav ul li:nth-of-type(5) a::after {
   background-position: -16px 0;
 }
+
 .cd-stretchy-nav ul li a span{
   font-size:1rem !important;
 }
+
 .cd-stretchy-nav ul li a i {
   margin-right: 1px;
   font-size: 20px;
 }
+
 .cd-stretchy-nav ul span {
   /* navigation item labels */
   display: block;
@@ -216,6 +240,7 @@ Stretchy Nav style - common to:
 .cd-stretchy-nav.nav-is-visible ul {
   visibility: visible;
 }
+
 .cd-stretchy-nav.nav-is-visible ul a i {
   /* navigation item icons */
   -webkit-transform: translateY(-50%) scale(1);
@@ -230,12 +255,15 @@ Stretchy Nav style - common to:
   -moz-transition: opacity 0.2s;
   transition: opacity 0.2s;
 }
+
 .cd-stretchy-nav.nav-is-visible ul a.active {
   color: #ffffff;
 }
+
 .cd-stretchy-nav.nav-is-visible ul a.active i {
   opacity: 1;
 }
+
 .cd-stretchy-nav.nav-is-visible ul a.active::before {
   -webkit-transform: translateX(3px) translateY(-50%) scaleY(1);
   -moz-transform: translateX(3px) translateY(-50%) scaleY(1);
@@ -246,6 +274,7 @@ Stretchy Nav style - common to:
   -moz-transition: -moz-transform 0.15s 0.3s;
   transition: transform 0.15s 0.3s;
 }
+
 .cd-stretchy-nav.nav-is-visible ul span {
   opacity: 1;
   -webkit-transform: translateX(0);
@@ -260,12 +289,15 @@ Stretchy Nav style - common to:
   -moz-transition: -moz-transform 0.2s;
   transition: transform 0.2s;
 }
+
 .no-touch .cd-stretchy-nav.nav-is-visible ul a:hover {
   color: #ffffff;
 }
+
 .no-touch .cd-stretchy-nav.nav-is-visible ul a:hover i {
   opacity: 1;
 }
+
 .no-touch .cd-stretchy-nav.nav-is-visible ul a:hover span {
   -webkit-transform: translateX(-5px);
   -moz-transform: translateX(-5px);
@@ -273,36 +305,42 @@ Stretchy Nav style - common to:
   -o-transform: translateX(-5px);
   transform: translateX(-5px);
 }
+
 .cd-stretchy-nav.nav-is-visible ul li:first-of-type a i,
 .cd-stretchy-nav.nav-is-visible ul li:first-of-type span {
   -webkit-animation-delay: 0.05s;
   -moz-animation-delay: 0.05s;
   animation-delay: 0.05s;
 }
+
 .cd-stretchy-nav.nav-is-visible ul li:nth-of-type(2) a i,
 .cd-stretchy-nav.nav-is-visible ul li:nth-of-type(2) span {
   -webkit-animation-delay: 0.1s;
   -moz-animation-delay: 0.1s;
   animation-delay: 0.1s;
 }
+
 .cd-stretchy-nav.nav-is-visible ul li:nth-of-type(3) a i,
 .cd-stretchy-nav.nav-is-visible ul li:nth-of-type(3) span {
   -webkit-animation-delay: 0.15s;
   -moz-animation-delay: 0.15s;
   animation-delay: 0.15s;
 }
+
 .cd-stretchy-nav.nav-is-visible ul li:nth-of-type(4) a i,
 .cd-stretchy-nav.nav-is-visible ul li:nth-of-type(4) span {
   -webkit-animation-delay: 0.2s;
   -moz-animation-delay: 0.2s;
   animation-delay: 0.2s;
 }
+
 .cd-stretchy-nav.nav-is-visible ul li:nth-of-type(5) a i,
 .cd-stretchy-nav.nav-is-visible ul li:nth-of-type(5) span {
   -webkit-animation-delay: 0.25s;
   -moz-animation-delay: 0.25s;
   animation-delay: 0.25s;
 }
+
 .cd-stretchy-nav.nav-is-visible ul li:nth-of-type(6) a i,
 .cd-stretchy-nav.nav-is-visible ul li:nth-of-type(6) span {
   -webkit-animation-delay: 0.3s;
@@ -337,6 +375,7 @@ keyframes
     -webkit-transform: translateY(-50%) scale(1);
   }
 }
+
 @-moz-keyframes scaleIn {
   from {
     -moz-transform: translateY(-50%) scale(0);
@@ -345,6 +384,7 @@ keyframes
     -moz-transform: translateY(-50%) scale(1);
   }
 }
+
 @keyframes scaleIn {
   from {
     -webkit-transform: translateY(-50%) scale(0);
@@ -361,6 +401,7 @@ keyframes
     transform: translateY(-50%) scale(1);
   }
 }
+
 @-webkit-keyframes slideIn {
   from {
     opacity: 0;
@@ -371,6 +412,7 @@ keyframes
     -webkit-transform: translateX(0);
   }
 }
+
 @-moz-keyframes slideIn {
   from {
     opacity: 0;
@@ -381,6 +423,7 @@ keyframes
     -moz-transform: translateX(0);
   }
 }
+
 @keyframes slideIn {
   from {
     opacity: 0;
